# crate_chatguru

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  rust.yml
src/: client.rs  error.rs  lib.rs
src/types/: mod.rs  payload.rs  webhook.rs
