[package]
name = "chatguru"
version = "0.1.0"
edition = "2021"
authors = ["eLai Integration Team"]
description = "Cliente completo da API ChatGuru com suporte a webhooks e mensagens"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seu-usuario/chatguru"
homepage = "https://github.com/seu-usuario/chatguru"
keywords = ["chatguru", "api", "webhook", "messaging"]
categories = ["api-bindings"]

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["sync", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2.1"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
